--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,9 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "img/icon.jpg",
-    "default_popup": "index.html"
+    "default_icon": "img/icon.PNG",
+    "default_popup": "index.html",
+    "default_title": "Post to Tumblr"
   },
   "permissions": [
   "activeTab"
